# android-interview-demos

AndroidCrashAnalysis/: PRACTICE_GUIDE.md  README.md  settings.gradle.kts  安卓稳定性排查思路指南.md
AndroidCrashAnalysis/app/: build.gradle.kts
AndroidCrashAnalysis/app/src/main/cpp/: CMakeLists.txt  native_crash.cpp
AndroidCrashAnalysis/gradle/: libs.versions.toml
KotlinCoreLearningDemo/: README.md  build.gradle.kts  settings.gradle.kts
KotlinCoreLearningDemo/app/: build.gradle.kts
KotlinCoreLearningDemo/core/: build.gradle.kts
KotlinCoreLearningDemo/docs/: Interview-QA.md  Kotlin-Core.md
MallCeilingContainer/: CORE_PRINCIPLES.md  README.md  settings.gradle.kts
MallCeilingContainer/app/: build.gradle.kts
MallCeilingContainer/gradle/: libs.versions.toml
MallPerformanceLab/: GUIDE.md  KNOWLEDGE_MAP.md  settings.gradle.kts
MallPerformanceLab/.claude/: settings.local.json
MallPerformanceLab/app/: build.gradle.kts
MallPerformanceLab/docs/: GUIDE.md  PERFORMANCE_PRINCIPLES.md  README.md  SPEECH_2MIN.md
MallPerformanceLab/gradle/: libs.versions.toml
MemoryLeakTest/: settings.gradle.kts
MemoryLeakTest/app/: build.gradle.kts
MemoryLeakTest/docs/: Handler内存泄漏分析指南.md  普通对象内存泄漏排查指南.md
MockJavaTop7RealWork/: README.md  settings.gradle.kts
MockJavaTop7RealWork/app/: build.gradle.kts
MockJavaTop7RealWork/docs/: ANSWERS.md
MockJavaTop7RealWork/gradle/: libs.versions.toml
TrackApi/: CORE_CONCEPTS.md  INTERVIEW_Q&A.md  README.md  settings.gradle.kts
TrackApi/app/: build.gradle.kts
TrackApi/gradle/: libs.versions.toml
(+232 files in other folders)
